--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Portfolio</title>
-    <h1>Wireframe Portfolio</h1>
-</head>
-<body>
     
+</head>
+<body class="container">
+    <div class="div1">This is my header!:^)</div>
+    <div class="div2">nav</div>
+    <div class="div3">
+        <div class="section">Section</div>
+        <div class="aside">aside</div>
+    </div>
+    <div>something</div>
 </body>
 </html>
